--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -398,7 +398,6 @@
             app:layout_constraintTop_toTopOf="@+id/alertAboveInputLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline1"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/alertAboveInputLayout"
             android:text="@string/alert_above"
             />
@@ -437,48 +436,22 @@
               />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4"
-            />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.45"
-            />
-
-      </androidx.constraintlayout.widget.ConstraintLayout>
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginTop="10dp"
-          android:layout_marginEnd="16dp"
-          android:gravity="center_vertical"
-          android:orientation="horizontal"
-          >
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:layout_weight="0.4"
             android:text="@string/alert_note"
+            app:layout_constraintTop_toTopOf="@+id/alertAboveNoteInputLayout"
+            app:layout_constraintEnd_toStartOf="@+id/guideline1"
+            app:layout_constraintBottom_toBottomOf="@+id/alertAboveNoteInputLayout"
             />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/alertAboveNoteInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:layout_weight="0.6"
+            app:layout_constraintTop_toBottomOf="@+id/alertAboveInputLayout"
+            app:layout_constraintStart_toEndOf="@id/guideline2"
+            app:layout_constraintEnd_toEndOf="parent"
             app:endIconMode="clear_text"
             >
           <com.google.android.material.textfield.TextInputEditText
@@ -491,38 +464,35 @@
               />
         </com.google.android.material.textfield.TextInputLayout>
 
-      </LinearLayout>
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginTop="10dp"
-          android:layout_marginEnd="16dp"
-          android:gravity="center_vertical"
-          android:orientation="horizontal"
-          >
-
         <TextView
+            android:id="@+id/textviewBelowAbove"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.4"
+            app:layout_constraintTop_toTopOf="@+id/alertBelowInputLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline1"
+            app:layout_constraintBottom_toBottomOf="@+id/alertBelowInputLayout"
             android:text="@string/alert_below"
             />
 
         <ImageView
-            android:src="@drawable/ic_action_trending_down"
+            android:src="@drawable/ic_action_trending_up"
             style="@style/alert_item_imagebutton"
             android:contentDescription="@string/alert_below"
+            app:layout_constraintTop_toTopOf="@+id/alertBelowInputLayout"
+            app:layout_constraintStart_toEndOf="@+id/guideline1"
+            app:layout_constraintEnd_toStartOf="@id/guideline2"
+            app:layout_constraintBottom_toBottomOf="@+id/alertBelowInputLayout"
             />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/alertBelowInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:layout_weight="0.6"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/alertAboveNoteInputLayout"
+            app:layout_constraintStart_toEndOf="@id/guideline2"
+            app:layout_constraintEnd_toEndOf="parent"
             app:endIconMode="clear_text"
             >
           <com.google.android.material.textfield.TextInputEditText
@@ -540,7 +510,51 @@
               />
         </com.google.android.material.textfield.TextInputLayout>
 
-      </LinearLayout>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/alert_note"
+            app:layout_constraintTop_toTopOf="@+id/alertBelowNoteInputLayout"
+            app:layout_constraintEnd_toStartOf="@+id/guideline1"
+            app:layout_constraintBottom_toBottomOf="@+id/alertBelowNoteInputLayout"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/alertBelowNoteInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/alertBelowInputLayout"
+            app:layout_constraintStart_toEndOf="@id/guideline2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:endIconMode="clear_text"
+            >
+          <com.google.android.material.textfield.TextInputEditText
+              android:id="@+id/alertBelowNoteInputEditText"
+              android:background="@color/design_default_color_background"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:inputType="textMultiLine"
+              android:imeOptions="actionDone"
+              />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.4"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.45"
+            />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
 
       <!--
             <View style="@style/Divider"
