--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -363,15 +363,62 @@
 
       <View style="@style/Divider"/>
 
-      <com.thecloudsite.stockroom.PickerKnob
-          android:id="@+id/picker_knob"
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/price_calculator_header"
+          style="@style/section_header"
+          />
+
+      <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          app:picker_min_value="0"
-          app:picker_max_value="50"
-          app:picker_text_size="10sp"
-          app:picker_dash_gap="10dp"
-          app:picker_text_color="@android:color/black"/>
+          android:layout_margin="20dp"
+          >
+
+        <com.thecloudsite.stockroom.utils.PickerKnob
+            android:id="@+id/picker_knob"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:picker_text_size="10sp"
+            app:picker_dash_gap="10dp"
+            app:picker_text_color="@android:color/black"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/new_stock_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:layout_constraintTop_toBottomOf="@id/picker_knob"
+            app:layout_constraintStart_toEndOf="@id/guidelineKnob"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/new_total_asset"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:layout_constraintTop_toBottomOf="@id/new_stock_price"
+            app:layout_constraintStart_toEndOf="@id/guidelineKnob"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineKnob"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.4"
+            />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
 
       <View style="@style/Divider"/>
 
@@ -816,13 +863,13 @@
           android:layout_margin="16dp"
           android:fadeScrollbars="false"
           >
-      <androidx.recyclerview.widget.RecyclerView
-          android:id="@+id/eventsView"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          tools:listitem="@layout/eventview_item"
-          />
-    </HorizontalScrollView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/eventsView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/eventview_item"
+            />
+      </HorizontalScrollView>
 
       <View style="@style/Divider"/>
 
