--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -366,7 +366,7 @@
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="@string/price_calculator_header"
+          android:text="@string/price_preview_header"
           style="@style/section_header"
           />
 
@@ -403,7 +403,9 @@
             android:id="@+id/new_total_asset"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintTop_toBottomOf="@id/new_stock_price"
             app:layout_constraintStart_toEndOf="@id/guidelineKnob"
             app:layout_constraintEnd_toEndOf="parent"
