--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -397,6 +397,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            style="@style/stock_item_text"
             app:layout_constraintTop_toBottomOf="@id/picker_knob"
             app:layout_constraintStart_toEndOf="@id/guidelineKnob"
             app:layout_constraintEnd_toEndOf="parent"
