--- a/app/src/main/res/layout/dialog_remove_asset.xml
+++ b/app/src/main/res/layout/dialog_remove_asset.xml
@@ -106,7 +106,7 @@
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="@string/notes"
+      android:text="@string/note"
       app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
       app:layout_constraintEnd_toStartOf="@+id/guideline1"
       app:layout_constraintStart_toStartOf="parent"
