--- a/app/src/main/res/layout/fragment_dividend.xml
+++ b/app/src/main/res/layout/fragment_dividend.xml
@@ -224,7 +224,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
-          android:text="@string/notes"
+          android:text="@string/note"
           style="@style/section_header"
           />
 
@@ -238,16 +238,16 @@
           android:gravity="end"
           >
         <ImageButton
-            android:id="@+id/updateDividendNotesButton"
+            android:id="@+id/updateDividendNoteButton"
             android:src="@drawable/ic_action_note_add"
             style="@style/asset_item_imagebutton"
-            android:tooltipText="@string/update_notes"
-            android:contentDescription="@string/update_notes"
+            android:tooltipText="@string/update_note"
+            android:contentDescription="@string/update_note"
             />
       </LinearLayout>
 
       <TextView
-          android:id="@+id/dividendNotesTextView"
+          android:id="@+id/dividendNoteTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
