--- a/app/src/main/res/layout/fragment_dividend.xml
+++ b/app/src/main/res/layout/fragment_dividend.xml
@@ -89,10 +89,11 @@
 
           <TextView
               android:id="@+id/textViewSetAnnualDividend"
-              android:layout_width="80dp"
+              android:layout_width="60dp"
               android:layout_height="wrap_content"
               android:gravity="end"
-              android:layout_marginStart="16dp"
+              android:layout_marginStart="8dp"
+              android:layout_marginEnd="8dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toEndOf="@+id/textViewSetAnnualDividendLabel"
               app:layout_constraintTop_toTopOf="parent"
@@ -103,7 +104,8 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="13sp"
-              android:layout_marginStart="16dp"
+              android:layout_marginStart="8dp"
+              android:layout_marginEnd="8dp"
               app:layout_constraintTop_toTopOf="@+id/textViewSetAnnualDividendLabel"
               app:layout_constraintStart_toEndOf="@+id/textViewSetAnnualDividend"
               app:layout_constraintBottom_toBottomOf="@+id/textViewSetAnnualDividendLabel"
