--- a/app/src/main/res/layout/db_type_headline_item.xml
+++ b/app/src/main/res/layout/db_type_headline_item.xml
@@ -13,6 +13,9 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textStyle="bold"
+      android:textSize="20sp"
+      android:textColor="@color/black"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
