--- a/app/src/main/res/layout/stockroomsmalllist_item.xml
+++ b/app/src/main/res/layout/stockroomsmalllist_item.xml
@@ -25,7 +25,7 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -44,11 +44,31 @@
   </androidx.constraintlayout.widget.ConstraintLayout>
 
   <androidx.constraintlayout.widget.ConstraintLayout
-      android:id="@+id/smalllist_textViewMarketPriceLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline2"
+      app:layout_constraintEnd_toStartOf="@+id/guideline3"
+      app:layout_constraintBottom_toBottomOf="parent"
+      >
+    <TextView
+        android:id="@+id/smalllist_textViewChange"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/smalllist_textViewMarketPriceLayout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/guideline3"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       >
@@ -79,7 +99,15 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_percent="0.4"
+      app:layout_constraintGuide_percent="0.2"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.6"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
