--- a/app/src/main/res/layout/text_marker_layout.xml
+++ b/app/src/main/res/layout/text_marker_layout.xml
@@ -5,7 +5,7 @@
     >
 
   <TextView
-      android:id="@+id/tvContent"
+      android:id="@+id/textmarker"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
