--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -110,8 +110,7 @@
           android:layout_marginTop="16dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
-          android:textSize="18sp"
-          android:textColor="@color/black"
+          android:textAppearance="@android:style/TextAppearance.Medium"
           />
 
       <FrameLayout
