--- a/app/src/main/res/layout/summarygroup_all_item.xml
+++ b/app/src/main/res/layout/summarygroup_all_item.xml
@@ -12,7 +12,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
-      android:textSize="16sp"
+      android:textAppearance="@android:style/TextAppearance.Medium"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
