--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -46,10 +46,12 @@
           android:id="@+id/menu_sort_group"
           android:checkable="true"
           android:title="@string/sort_group" />
+<!--
       <item
           android:id="@+id/menu_sort_unsorted"
           android:checkable="true"
-          android:title="@string/sort_group_unsorted" />
+          android:title="@string/sort_unsorted" />
+-->
     </menu>
   </item>
 
