--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
   <declare-styleable name="PickerKnob">
     <attr name="picker_dash_gap" format="dimension"/>
     <attr name="picker_text_size" format="dimension"/>
+    <attr name="picker_view_height" format="dimension"/>
     <attr name="picker_text_padding" format="dimension"/>
     <attr name="picker_text_color" format="integer"/>
     <attr name="picker_dash_count" format="integer"/>
